--- a/сss/home.css
+++ b/сss/home.css
@@ -33,21 +33,24 @@
 .price {
     position: relative;
     background-color: #ffffff;
-    height: 2304px;
-    
+    height: 2100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 /*Ногтевой сервис*/
 .manic{
     position: absolute;
     display: block;
     left: 20%;
-    top: 235px;
+    top: 100px;
     color:#000000;
     width: 100%;
     max-width: 500px;
     font-family: Roboto Slab;
     font-style: normal;
     line-height: 53px;
+    height: 415px;
 }
 
 /*Заголовок*/
@@ -71,19 +74,20 @@
     width: 319px;
     height: 415px;
     left: 55%;
-    top: 235px;
+    top: 100px;
 }
 .hair{
     position: absolute;
     display: block;
     right: 20%;
-    top: 700px;
+    top: 800px;
     color:#000000;
     width: 100%;
     max-width: 500px;
     font-family: Roboto Slab;
     font-style: normal;
     line-height: 37px;
+    height: 415px;
 }
 /*Заголовок*/
 .hair0{
@@ -106,7 +110,7 @@
 .img_hair{
     position: absolute;
     left: 20%;
-    top: 700px;
+    top: 800px;
     width: 319px;
     height: 415px;
 }
@@ -115,13 +119,14 @@
     position: absolute;
     display: block;
     left: 20%;
-    top: 1165px;
+    top: 1500px;
     color:#000000;
     width: 100%;
     max-width: 500px;
     font-family: Roboto Slab;
     font-style: normal;
     line-height: 37px;
+    height: 415px;
 }
 /*Заголовок*/
 .face0{
@@ -144,19 +149,19 @@
     width: 319px;
     height: 415px;
     left: 55%;
-    top: 1165px;
+    top: 1500px;
 }
 
 .regist {
     background-color: #9DB9A1;
-    height: 384px;
-    
+    height: 384px;   
 }
 .par {
+    position: relative;
     background-color: #ffffff;
     height: 768px;
-    
 }
+
 .contact {
     background-color: #708A78;
     height: 384px;
