--- a/сss/home.css
+++ b/сss/home.css
@@ -46,7 +46,7 @@
     top: 100px;
     color:#000000;
     width: 100%;
-    max-width: 500px;
+    max-width: 505px;
     font-family: Roboto Slab;
     font-style: normal;
     line-height: 53px;
@@ -73,22 +73,30 @@
     position: absolute;
     width: 319px;
     height: 415px;
-    left: 55%;
+    right:20%;
     top: 100px;
+}
+.hair_all{
+    margin:0 auto;
+    max-width: 819px;
+    min-width: 819px;
+    width:100%;
+ 
 }
 .hair{
     position: absolute;
-    display: block;
-    right: 20%;
     top: 800px;
     color:#000000;
     width: 100%;
-    max-width: 500px;
+    right: 20%;
+    max-width: 505px;
     font-family: Roboto Slab;
     font-style: normal;
     line-height: 37px;
     height: 415px;
+
 }
+
 /*Заголовок*/
 .hair0{
     font-size: 30px;
@@ -122,7 +130,7 @@
     top: 1500px;
     color:#000000;
     width: 100%;
-    max-width: 500px;
+    max-width: 505px;
     font-family: Roboto Slab;
     font-style: normal;
     line-height: 37px;
@@ -148,18 +156,81 @@
     position: absolute;
     width: 319px;
     height: 415px;
-    left: 55%;
+    right: 20%;
     top: 1500px;
 }
 
 .regist {
+    position: relative;
     background-color: #9DB9A1;
     height: 384px;   
+}
+/*Записаться*/
+.regtext{
+    position: absolute;
+    top: 10%;
+    padding-left:20%;
+    padding-right: 20%;
+    width:60%;
+    color: #000000;
+    font-family: Roboto Slab;
+    font-style: normal;
+    line-height: 37px;
+}
+/*Поле для регистрации*/
+.reg_field{
+    position:absolute;
+    margin-top: 30%;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+.reg_but{
+    color:#203331;
 }
 .par {
     position: relative;
     background-color: #ffffff;
     height: 768px;
+}
+/*акции прямоугольник основной*/
+.rectangle {
+    position:absolute;
+    display: block;
+    top:5%;
+    left:30%;
+    right: 30%;
+    width: 40%;
+	height: 40%;
+    background-color: transparent;
+    border:3px solid #9DB9A1;
+
+    font-family: Roboto Slab;
+    font-style: normal;
+    line-height: 30px;
+}
+/*акции прямоугольник второй*/
+.rectangle2{
+    position:absolute;
+    top:3%;
+    left:31%;
+    right: 29%;
+    width: 40%;
+	height: 40%;
+    background-color: transparent;
+    border:3px solid #E1BFB3;   
+}
+/*акции текст*/
+.sales{
+    display: inline;
+    line-height: 40px;
+    font-size:25px;
+    float: left;
+}
+.sales_pr{
+    display: inline;
+    line-height: 40px;
+    font-size:25px;
+    float: right;
 }
 
 .contact {
