--- a/сss/home.css
+++ b/сss/home.css
@@ -1,97 +1,35 @@
-/* ГЛАВНАЯ */
 .home {
     background-color: #EEEAE7;
-    height: 768px;
-    width: 100%;
+    height: 700px;
     
 }
-
-/* меню */
-button#pop{
- width: 100%;
-}
 .clr {
- color: #203331 !important; 
+ color: #203331; 
  margin: 15px;
  font-weight: 500;
 }
 .clr:hover {
- color: #708A78 !important;
+ color: #708A78;
 }
-/* меню */
-
-/* кнопка */
-button#p {
-    background-color: #9DB9A1;
-    border-radius: 90px;
-    width: 200px;
-    height: 45px;
-    /* font-size: 18px; */
-    font-weight: 500;
-    color: #203331 !important; 
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-    margin-top: 20px;
-
-}
-button#p:hover {
-    background-color: #708A78;
-}
-/* кнопка */
-
-h1 {
-    font-size: 60px !important;
-    color: #FFFFFF;
-    text-align: center;
-    padding-top: 80px;
-}
-.green {
+.name {
+    background-color: #203331;
+    margin: 0 auto;
     width: 824px;
     height: 312px;
-    background-color: #203331;
-    margin-bottom: 20px;
-       
-}
-.cntr {
     position: absolute;
-    top: 59%;
-    left: 50%;
-    z-index: 1;
-    transform: translate(-50%, -50%);
-
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-li {
-    list-style-type: none;
-    text-align: center;
-    color: #203331;
-    font-weight: 500;
-   }
-
-/* ГЛАВНАЯ */
 .about {
-    background-color: #f56565;
+    background-color: #ffffff;
     height: 768px;
     
 }
-img#sln {
-    width: 100%;
-}
-h2 {
-    font-weight: 500;
-    font-size: 46px !important;
-    color: #203331;
-}
-p {
-    font-size: 18px !important;
-    color: #203331;
-}
-.b {
-    width: 65%;
-    margin: 0 auto;
-    padding-top: 10%;
-}
-
 .price {
     background-color: #ffffff;
     height: 2304px;
@@ -116,8 +54,4 @@ footer {
     background-color: #203331;
     height: 100px;
     
-}
-.navbar-toggler-icon {
-    color: black;
-    background-color: blue;
 }
