--- a/сss/home.css
+++ b/сss/home.css
@@ -1,44 +1,49 @@
 /* ГЛАВНАЯ */
+
+.fone1 {   
+    background-image: url(../resources/12.png);      
+    background-position: center center;      
+    background-repeat: no-repeat;      
+    background-size: cover;        
+}
+
 .home {
-    background-color: #EEEAE7;
+    /* background-color: #EEEAE7; */
     height: 768px;
     width: 100%;
     
 }
 
-/* меню */
 button#pop{
- width: 100%;
+    width: 100%;
 }
-.clr {
- color: #203331 !important; 
- margin: 15px;
- font-weight: 500;
-}
-.clr:hover {
- color: #708A78 !important;
-}
-/* меню */
 
-/* кнопка */
+.clr {
+    color: #203331 !important; 
+    margin: 15px;
+    font-weight: 500;
+}
+
+.clr:hover {
+    color: #708A78 !important;
+}
+
 button#p {
     background-color: #9DB9A1;
     border-radius: 90px;
     width: 200px;
     height: 45px;
-    /* font-size: 18px; */
     font-weight: 500;
     color: #203331 !important; 
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
     margin-top: 20px;
-
 }
+
 button#p:hover {
     background-color: #708A78;
 }
-/* кнопка */
 
 h1 {
     font-size: 60px !important;
@@ -46,21 +51,22 @@ h1 {
     text-align: center;
     padding-top: 80px;
 }
+
 .green {
     width: 824px;
     height: 312px;
     background-color: #203331;
-    margin-bottom: 20px;
-       
+    margin-bottom: 20px;    
 }
+
 .cntr {
     position: absolute;
     top: 59%;
     left: 50%;
     z-index: 1;
     transform: translate(-50%, -50%);
-
 }
+
 li {
     list-style-type: none;
     text-align: center;
@@ -69,139 +75,85 @@ li {
    }
 
 /* ГЛАВНАЯ */
+
+/* О НАС */
 .about {
-    background-color: #f56565;
     height: 768px;
-    
+    width: 100%;
 }
+
 img#sln {
     width: 100%;
 }
+
 h2 {
     font-weight: 500;
     font-size: 46px !important;
     color: #203331;
 }
+
 p {
     font-size: 18px !important;
     color: #203331;
+    font-weight: 400  !important;
 }
+
 .b {
     width: 65%;
     margin: 0 auto;
     padding-top: 10%;
 }
+/* О НАС */
 
+/* УСЛУГИ */
+.fone2 {   
+    background-image: url(../resources/345.png);      
+    background-position: center center;      
+    background-repeat: no-repeat;      
+    background-size: cover;   
+    width: 100%;
+    height: 80%;     
+}
 .price {
-    position: relative;
-    background-color: #ffffff;
+    width: 100%;
+    background-color: #EEEAE7;
+    /* нужен ли фон?? */
     height: 2100px;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    position: relative;
+    
 }
-/*Ногтевой сервис*/
-.manic{
-    position: absolute;
-    display: block;
-    left: 20%;
-    top: 100px;
-    color:#000000;
-    width: 100%;
-    max-width: 505px;
-    font-family: Roboto Slab;
-    font-style: normal;
-    line-height: 53px;
-    height: 415px;
+.manic {
+    width: 65%;
+    margin: 0 auto;
+    padding-top: 5%;
+}
+.face {
+    width: 65%;
+    margin: 0 auto;
+    padding-top: 15%;
+}
+.hair {
+    width: 65%;
+    margin: 0 auto;
+    padding-top: 15%;
 }
 
-/*Заголовок*/
 h3{
-    font-size: 30px;
+    font-size: 30px !important;
 }
-/*Перечень услуг*/
+
 h4{
-    display: inline;
-    font-size: 20px;
-}
-/*Цена*/
-h5{    
-    display: inline;
-    font-size: 20px;
-    float: right;
-}
-/*Перечень услуг*/
-h7{
-    display: inline;
-    font-size: 20px;
-    float: right;
-}
-/*Цена*/
-h6{    
-    display: inline;
-    font-size: 20px;
-    float: left;
-}
-/*картинка маникюр*/
-.img_manic{
-    position: absolute;
-    width: 319px;
-    height: 415px;
-    right:20%;
-    top: 100px;
-}
-.hair_all{
-    margin:0 auto;
-    max-width: 819px;
-    min-width: 819px;
-    width:100%;
- 
-}
-.hair{
-    position: absolute;
-    top: 800px;
-    color:#000000;
-    width: 100%;
-    right: 20%;
-    max-width: 505px;
-    font-family: Roboto Slab;
-    font-style: normal;
-    line-height: 37px;
-    height: 415px;
-
+   font-size: 20px !important;
+   font-weight: 400  !important;
 }
 
-/*картинка волосы*/
-.img_hair{
-    position: absolute;
-    left: 20%;
-    top: 800px;
+.img_price{
     width: 319px;
     height: 415px;
 }
-/*Ногтевой сервис*/
-.face{
-    position: absolute;
-    display: block;
-    left: 20%;
-    top: 1500px;
-    color:#000000;
-    width: 100%;
-    max-width: 505px;
-    font-family: Roboto Slab;
-    font-style: normal;
-    line-height: 37px;
-    height: 415px;
-}
-
-/*картинка маникюр*/
-.img_face{
-    position: absolute;
-    width: 319px;
-    height: 415px;
-    right: 20%;
-    top: 1500px;
-}
+/* УСЛУГИ */
 
 .regist {
     position: relative;
@@ -209,17 +161,7 @@ h6{
     height: 384px;   
 }
 /*Записаться*/
-.regtext{
-    position: absolute;
-    top: 10%;
-    padding-left:20%;
-    padding-right: 20%;
-    width:60%;
-    color: #000000;
-    font-family: Roboto Slab;
-    font-style: normal;
-    line-height: 37px;
-}
+
 /*Поле для регистрации*/
 .reg_field{
     position:absolute;
