--- a/сss/home.css
+++ b/сss/home.css
@@ -161,32 +161,17 @@ h4{
     background-color: #9DB9A1;
     height: 384px;   
 }
+
 .regist2 {
-    width: 65%;
+    width: 55%;
     margin: 0 auto;
-    padding-top: 2%;
 }
 
 .regist3 {
-    width: 45%;
+    width: 30%;
     margin: 0 auto;
 }
 
-
-/*Поле для регистрации*/
-.reg_field{
-    position:absolute;
-    margin-top: 30%;
-    padding-left: 15%;
-    padding-right: 15%;
-}
-
-.par {
-    position: relative;
-    background-color: #ffffff;
-    height: 768px;
-}
-   
 button#reg {
     border-radius: 90px;
     background-color:#203331; 
@@ -205,7 +190,14 @@ button#reg {
 button#reg:hover {
     background-color: #101a19;
 }
+/* РЕГИСТРАЦИЯ */
 
+.par {
+    position: relative;
+    background-color: #ffffff;
+    height: 768px;
+}
+   
 /*акции прямоугольник основной*/
 .rectangle {
     position:absolute;
