--- a/сss/home.css
+++ b/сss/home.css
@@ -68,12 +68,12 @@ h1 {
     transform: translate(-50%, -50%);
 }
 
-li {
+li#li {
     list-style-type: none;
     text-align: center;
     color: #203331;
     font-weight: 500;
-   }
+}
 
 /* ГЛАВНАЯ */
 
@@ -117,7 +117,7 @@ p {
 }
 .price {
     width: 100%;
-    background-color: #EEEAE7;
+    /* background-color: #EEEAE7; */
     /* нужен ли фон?? */
     height: 2100px;
     margin-left: auto;
@@ -143,11 +143,13 @@ p {
 
 h3{
     font-size: 30px !important;
+    color: #203331;
 }
 
 h4{
    font-size: 20px !important;
    font-weight: 400  !important;
+   color: #203331;
 }
 
 .img_price{
@@ -159,7 +161,7 @@ h4{
 /* РЕГИСТРАЦИЯ */
 .regist {
     background-color: #9DB9A1;
-    height: 384px;   
+    height: 384px;  
 }
 
 .regist2 {
@@ -186,103 +188,100 @@ button#reg {
     margin-top: 10px;
 
 }
-
+.media {
+    width: 80%;
+    margin: 0 auto;
+}
 button#reg:hover {
     background-color: #101a19;
 }
 /* РЕГИСТРАЦИЯ */
 
+/* ОТЗЫВЫ И АКЦИИ */
 .par {
     position: relative;
     background-color: #ffffff;
     height: 768px;
+    background-image: url(../resources/78.png);      
+    background-position: center center;      
+    background-repeat: no-repeat;      
+    background-size: cover; 
+}
+
+img#tr {
+    width: 20%;
+}
+
+.otzv {
+    width: 55%;
+    margin: 0 auto;
+    padding-top: 5%; 
+}
+
+.tor {
+    padding-top: 3%;
+}
+
+.akcii {
+    padding-top: 8%;
+}
+
+.rectangle {
+    padding-top: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 1%;
+    margin: 0 auto;  
+    width: 40%;
+	border:3px solid #E1BFB3;
+}
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
 }
    
-/*акции прямоугольник основной*/
-.rectangle {
-    position:absolute;
-    display: block;
-    top:5%;
-    left:30%;
-    right: 30%;
-    width: 40%;
-	height: 40%;
-    background-color: transparent;
-    border:3px solid #9DB9A1;
+   .carousel-control-next-icon {
+     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+/* ОТЗЫВЫ И АКЦИИ */
 
-    font-family: Roboto Slab;
-    font-style: normal;
-    line-height: 30px;
-}
-/*акции прямоугольник второй*/
-.rectangle2{
-    position:absolute;
-    top:3%;
-    left:31%;
-    right: 29%;
-    width: 40%;
-	height: 40%;
-    background-color: transparent;
-    border:3px solid #E1BFB3;   
-}
-h10{
-    display: inline;
-    line-height: 40px;
-    font-size:25px;
-    float: left;
-}
-h11{
-    display: inline;
-    line-height: 40px;
-    font-size:25px;
-    float: right;
-}
-
+/* КОНТАКТЫ */
 .contact {
-    position: relative;
     background-color: #708A78;
-    height: 384px;
-    
+    height: 384px;  
 }
-/*Отступ сверху*/
-.mar_con{
-    position:absolute;
-    margin-top: 3%;
-    padding-left: 15%;
-    padding-right: 15%;
-}
-/*знак и текст*/
-.log_text{  
-    display: inline-block;
-    width: 300px;
-    margin: 10px 5px 15px 0px;
 
+li {
+    list-style-type: none;
+    /* text-align: center; */
+    color: #203331;
+    font-weight: 400;
+    font-size: 18px !important;
 }
-/*текст контакты*/
-.cont{
+.cont {
+    width: 55%;
+    margin: 0 auto;
+    padding-top: 2.7%; 
+}
+.contac {
     display: inline;
-    font-family: Roboto Slab;
     font-style: normal;
-    font-size: 20px;
-    max-width:250px;
-    height: 20px;
-    margin-right: 20px;
+    width: 9%;
 }
-/*карта*/
-.map{
-position: absolute;
-margin-top: 3%;
-right: 15%;
+/* КОНТАКТЫ */
 
-}
-
-.footer {
+footer {
     background-color: #203331;
-    height: 100px;
+    height: 50px;  
     
 }
 
-.navbar-toggler-icon {
-    color: black;
-    background-color: blue;
+.knd {
+    padding-top: 0.8%;
+    margin: 0 auto;
+    width: 90%;
+}
+a#cnd { 
+    color: #EEEAE7; 
+    font-weight: 300;
 }
