--- a/сss/home.css
+++ b/сss/home.css
@@ -76,8 +76,9 @@ li#li {
 
 /* О НАС */
 .about {
-    height: 768px;
+    /* height: 768px; */
     width: 100%;
+    /* background-color: #EEEAE7; */
 }
 
 img#sln {
@@ -99,7 +100,8 @@ p {
 .b {
     width: 65%;
     margin: 0 auto;
-    padding-top: 10%;
+    padding-top: 200px;
+    padding-bottom: 11%;
 }
 /* О НАС */
 
@@ -116,11 +118,12 @@ p {
     width: 100%;
     /* background-color: #EEEAE7; */
     /* нужен ли фон?? */
-    height: 2100px;
+    /* height: 2100px; */
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    
+    padding-bottom: 15%;
+    padding-top: 7%;
 }
 
 .manic {
