--- a/Конечный вариант/KNDsalon/wwwroot/css/home.css
+++ b/Конечный вариант/KNDsalon/wwwroot/css/home.css
@@ -1,32 +1,32 @@
 /* ГЛАВНАЯ */
 
-.fone1 {   
-    background-image: url(../resources/12.png);      
-    background-position: center center;      
-    background-repeat: no-repeat;      
-    background-size: cover;        
+.fone1 {
+    background-image: url(../resources/12.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 .home {
     /* background-color: #EEEAE7; */
     height: 768px;
     width: 100%;
-    
 }
 
-button#pop{
+button#pop {
     width: 100%;
 }
 
 .clr {
-    color: #203331 !important; 
+    color: #203331 !important;
     margin: 15px;
     font-weight: 500;
 }
 
-.clr:hover {
-    color: #708A78 !important;
-}
+    .clr:hover {
+        color: #708A78 !important;
+    }
 
 a#p {
     background-color: #9DB9A1;
@@ -35,16 +35,16 @@ a#p {
     height: 35px;
     font-size: 16px;
     font-weight: 500;
-    color: #203331 !important; 
+    color: #203331 !important;
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
     margin-top: 20px;
 }
 
-a#p:hover {
-    background-color: #708A78;
-}
+    a#p:hover {
+        background-color: #708A78;
+    }
 
 h1 {
     font-size: 60px !important;
@@ -58,11 +58,11 @@ h1 {
     width: 824px;
     height: 312px;
     background-color: #203331;
-    margin-bottom: 20px;    
+    margin-bottom: 20px;
 }
 
 .cntr {
-    padding-top: 12%;    
+    padding-top: 12%;
 }
 
 li#li {
@@ -76,8 +76,9 @@ li#li {
 
 /* О НАС */
 .about {
-    height: 768px;
+    /* height: 768px; */
     width: 100%;
+    /* background-color: #EEEAE7; */
 }
 
 img#sln {
@@ -93,34 +94,37 @@ h2 {
 p {
     font-size: 18px !important;
     color: #203331;
-    font-weight: 400  !important;
+    font-weight: 400 !important;
 }
 
 .b {
     width: 65%;
     margin: 0 auto;
-    padding-top: 10%;
+    padding-top: 200px;
+    padding-bottom: 11%;
 }
 /* О НАС */
 
 /* УСЛУГИ */
-.fone2 {   
-    background-image: url(../resources/345.png);      
-    background-position: center center;      
-    background-repeat: no-repeat;      
-    background-size: cover;   
+.fone2 {
+    background-image: url(../resources/345.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
-    height: 80%;     
+    height: 80%;
 }
+
 .price {
     width: 100%;
     /* background-color: #EEEAE7; */
     /* нужен ли фон?? */
-    height: 2100px;
+    /* height: 2100px; */
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    
+    padding-bottom: 15%;
+    padding-top: 5%;
 }
 
 .manic {
@@ -128,39 +132,40 @@ p {
     margin: 0 auto;
     padding-top: 5%;
 }
+
 .face {
     width: 65%;
     margin: 0 auto;
     padding-top: 15%;
 }
+
 .hair {
     width: 65%;
     margin: 0 auto;
     padding-top: 15%;
 }
 
-h3{
+h3 {
     font-size: 30px !important;
     color: #203331;
 }
 
-h4{    
-   font-size: 20px !important;
-   font-weight: 400  !important;
-   color: #203331;
-   
+h4 {
+    font-size: 20px !important;
+    font-weight: 400 !important;
+    color: #203331;
 }
 
-.img_price{    
+.img_price {
     width: 100%;
-    
 }
 /* УСЛУГИ */
 
 /* РЕГИСТРАЦИЯ */
 .regist {
     background-color: #9DB9A1;
-    height: 384px;  
+    height: 384px;
+    width: 100%;
 }
 
 .regist2 {
@@ -170,17 +175,19 @@ h4{
 
 button#reg {
     border-radius: 90px;
-    background-color:#203331; 
+    background-color: #203331;
     width: 100%;
     height: 100%;
     font-weight: 400;
     font-size: 16px;
     color: #9DB9A1 !important;
-    }
+}
+
 .media {
     width: 80%;
     margin: 0 auto;
 }
+
 button#reg:hover {
     background-color: #101a19;
 }
@@ -191,10 +198,11 @@ button#reg:hover {
     position: relative;
     background-color: #ffffff;
     height: 768px;
-    background-image: url(../resources/78.png);      
-    background-position: center center;      
-    background-repeat: no-repeat;      
-    background-size: cover; 
+    background-image: url(../resources/78.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
 }
 
 img#tr {
@@ -204,7 +212,7 @@ img#tr {
 .otzv {
     width: 55%;
     margin: 0 auto;
-    padding-top: 5%; 
+    padding-top: 5%;
 }
 
 .tor {
@@ -220,24 +228,24 @@ img#tr {
     padding-left: 1%;
     padding-right: 1%;
     padding-bottom: 1%;
-    margin: 0 auto;  
+    margin: 0 auto;
     width: 40%;
-	border:3px solid #E1BFB3;
+    border: 3px solid #E1BFB3;
 }
 
 .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
 }
-   
-   .carousel-control-next-icon {
-     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
 /* ОТЗЫВЫ И АКЦИИ */
 
 /* КОНТАКТЫ */
 .contact {
     background-color: #708A78;
-    height: 384px;  
+    height: 384px;
 }
 
 li {
@@ -247,11 +255,13 @@ li {
     font-weight: 400;
     font-size: 18px !important;
 }
+
 .cont {
     width: 65%;
     margin: 0 auto;
-    padding-top: 2.7%; 
+    padding-top: 2.7%;
 }
+
 .contac {
     display: inline;
     font-style: normal;
@@ -261,8 +271,8 @@ li {
 
 footer {
     background-color: #203331;
-    height: 50px;  
-    
+    height: 50px;
+    width: 100%;
 }
 
 .knd {
@@ -270,8 +280,9 @@ footer {
     margin: 0 auto;
     width: 90%;
 }
-a#cnd { 
-    color: #EEEAE7; 
+
+a#cnd {
+    color: #EEEAE7;
     font-weight: 300;
 }
 
