--- a/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
+++ b/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
             <div class="b">
                 <div class="row">
                     <div class="col-lg-6 col-sm-6 col-12">
-                        <img id="sln" src="../resources/salon.jpg">
+                        <img id="sln" src="/resources/salon.jpg">
                     </div>
                     <div class="col-lg-6 col-sm-6 col-12">
                         <h2>KND -</h2>
@@ -125,14 +125,14 @@
                     </table>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-6">
-                    <img class="img_price" src="../resources/hands.jpg">
+                    <img class="img_price" src="/resources/hands.jpg">
                 </div>
             </div>
         </div>
         <div class="face">
             <div class="row">
                 <div class="col-lg-4 col-sm-6 col-6">
-                    <img class="img_price" src="../resources/hair.jpg">
+                    <img class="img_price" src="/resources/hair.jpg">
                 </div>
                 <div class="col-lg-8 col-sm-6 col-6">
                     <table style="width: 100%;">
@@ -230,7 +230,7 @@
                     </table>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-6">
-                    <img class="img_price" src="../resources/face.jpg">
+                    <img class="img_price" src="/resources/face.jpg">
                 </div>
             </div>
         </div>
@@ -348,10 +348,10 @@
                             <h3>Контакты</h3>
                         </li></br>
                         <li>
-                            <img class="contac" src="~/icon/instagram.svg">  kndbeauty
+                            <img class="contac" src="~/icon/instagram.svg">  kndbeauty__
                         </li></br>
                         <li>
-                            <img class="contac" src="~/icon/envelope.svg">  knd.gmail.com
+                            <img class="contac" src="~/icon/envelope.svg">  kndbeauty@mail.ru
                         </li></br>
                         <li>
                             <img class="contac" src="~/icon/telephone.svg"> +7(977)-421-87-41
