--- a/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
+++ b/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
@@ -71,10 +71,10 @@
         <div class="about" id="section2">
             <div class="b">
                 <div class="row">
-                    <div class="col-lg-6 col-sm-6 col-12">
+                    <div class="col-lg-6 col-sm-12 col-12">
                         <img id="sln" src="/resources/salon.jpg">
                     </div>
-                    <div class="col-lg-6 col-sm-6 col-12">
+                    <div class="col-lg-6 col-sm-12 col-12">
                         <h2>KND -</h2>
                         <p>это атмосфера комфорта и совместного творчества. Модное пространсво.Светлый и уютный салон. Удобное место расположения. Одновременные услуги. Титулованные мастера с большим опытом и знанием языков. Классная музыка и вкусный кофе.</p>
                     </div>
@@ -88,7 +88,7 @@
         <h3 style="text-align: center;">Услуги</h3>
         <div class="manic">
             <div class="row">
-                <div class="col-lg-8 col-sm-6 col-6">
+                <div class="col-lg-8 col-sm-6 col-12">
                     <table style="width: 100%;">
                         <tr>
                             <th><h3>Ногтевой сервис</h3></th>
@@ -124,17 +124,17 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-6">
-                    <img class="img_price" src="/resources/hands.jpg">
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <img class="img_price" src="../resources/hands.jpg">
                 </div>
             </div>
         </div>
         <div class="face">
             <div class="row">
-                <div class="col-lg-4 col-sm-6 col-6">
-                    <img class="img_price" src="/resources/hair.jpg">
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <img class="img_price" src="../resources/hair.jpg">
                 </div>
-                <div class="col-lg-8 col-sm-6 col-6">
+                <div class="col-lg-8 col-sm-6 col-12">
                     <table style="width: 100%;">
                         <tr>
                             <th></th>
@@ -185,7 +185,7 @@
         </div>
         <div class="hair">
             <div class="row">
-                <div class="col-lg-8 col-sm-6 col-6">
+                <div class="col-lg-8 col-sm-6 col-12">
                     <table style="width: 100%;">
                         <tr>
                             <th><h3>Услуги косметолога</h3></th>
@@ -229,8 +229,8 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-6">
-                    <img class="img_price" src="/resources/face.jpg">
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <img class="img_price" src="../resources/face.jpg">
                 </div>
             </div>
         </div>
@@ -267,10 +267,10 @@
                 <div class="col-lg-4 col-sm-6">
                     <input type="datetime-local" name="DateTime_of_recording" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Время">
                 </div>
-                @*<div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
                     <input type="text" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Комментарий">
-                </div>*@
-                <div style="margin: 0 auto;" class="col-lg-4 col-sm-6">
+                </div>
+                <div style="margin: 0 auto;" class="col-lg-6 col-sm-6">
                     <button id="reg" type="submit" class="btn btn-sm">Записаться</button>
                 </div>
             </div>
@@ -305,7 +305,7 @@
                             <img id="tr" src="../icon/person-01.png" class="mr-3" alt="...">
                             <div class="media-body">
                                 <h5 class="mt-0">Татьяна</h5>
-                                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                                <p>Ходила на стрижку, крайне для меня важную, так как долго я отращивала волосы и сильно ценила свою длину. Поэтому, так как я очень капризная, я не могла отдать свою голову в руки кого попало. В итоге - идеально! Наверное, это моя лучшая за жизнь стрижка.</p>
                             </div>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                             <img id="tr" src="../icon/person-02.png" class="mr-3" alt="...">
                             <div class="media-body">
                                 <h5 class="mt-0">Диана</h5>
-                                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                                <p>Я в восторге от нового салона. Приятная атмосфера и обаятельные мастера. Стильный интерьер и очень приятные цены, которые не могут не радовать. Работают на дорогих материалах. Делала окрашивание, ушла довольной и отдохнувшей. Рекомендую!</p>
                             </div>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                             <img id="tr" src="../icon/person-03.png" class="mr-3" alt="...">
                             <div class="media-body">
                                 <h5 class="mt-0">Маша</h5>
-                                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                                <p>Салон посещаю на постоянной основе, проходя различные уходы для волос. Экспериментирую и пробую разные уходы. Рекомендую!</p>
                             </div>
                         </div>
                     </div>
@@ -342,8 +342,8 @@
     <div class="contact" id="section6">
         <div class="cont">
             <div class="row">
-                <div class="col">
-                    <ul>
+                <div class="col-lg-6 col-sm-12">
+                    <ul>                        
                         <li>
                             <h3>Контакты</h3>
                         </li></br>
@@ -361,9 +361,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="col-lg-6 col-sm-12">
                     <div class="map">
-                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1583bd3a53ce4d04c18738bb95a340cd758f85a934b87d10585c753230edbe32&amp;width=460&amp;height=299&amp;lang=ru_RU&amp;scroll=true"></script>
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A35663334e522f80bd9eeb8f09a69ecffb8c7f9e5a71123837c2badc3acf5a910&amp;width=400&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
                     </div>
                 </div>
             </div>
