--- a/Конечный вариант/KNDsalon/wwwroot/css/home.css
+++ b/Конечный вариант/KNDsalon/wwwroot/css/home.css
@@ -1,10 +1,14 @@
 /* ГЛАВНАЯ */
+* {
+    border: 1px solid #f00;
+}
 
 .fone1 {
     background-image: url(/resources/12копия.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    
     
 
 }
@@ -66,228 +70,363 @@ h1 {
     padding-top: 12%;
 }
 
-li#li {
-    list-style-type: none;
-    text-align: center;
-    color: #203331;
-    font-weight: 500;
+    li#li {
+        list-style-type: none;
+        text-align: center;
+        color: #203331;
+        font-weight: 500;
+    }
+
+    /* ГЛАВНАЯ */
+
+    /* О НАС */
+    .about {
+        /* height: 768px; */
+        width: 100%;
+        /* background-color: #EEEAE7; */
+    }
+
+    img#sln {
+        width: 100%;
+    }
+
+    h2 {
+        font-weight: 500;
+        font-size: 46px !important;
+        color: #203331;
+    }
+
+    p {
+        font-size: 18px !important;
+        color: #203331;
+        font-weight: 400 !important;
+    }
+
+    .b {
+        width: 65%;
+        margin: 0 auto;
+        padding-top: 200px;
+        padding-bottom: 11%;
+    }
+    /* О НАС */
+
+    /* УСЛУГИ */
+    .fone2 {
+        background-image: url(/resources/346.png);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 80%;
+    }
+
+    .price {
+        width: 100%;
+        /* background-color: #EEEAE7; */
+        /* нужен ли фон?? */
+        /* height: 2100px; */
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        padding-bottom: 15%;
+    }
+
+    .manic {
+        width: 65%;
+        margin: 0 auto;
+        padding-top: 5%;
+    }
+
+    .face {
+        width: 65%;
+        margin: 0 auto;
+        padding-top: 15%;
+    }
+
+    .hair {
+        width: 65%;
+        margin: 0 auto;
+        padding-top: 15%;
+    }
+
+    h3 {
+        font-size: 30px !important;
+        color: #203331;
+    }
+
+    h4 {
+        font-size: 20px !important;
+        font-weight: 400 !important;
+        color: #203331;
+    }
+
+    .img_price {
+        width: 100%;
+    }
+    /* УСЛУГИ */
+
+    /* РЕГИСТРАЦИЯ */
+    .regist {
+        background-color: #9DB9A1;
+        height: 384px;
+        width: 100%;
+    }
+
+    .regist2 {
+        width: 55%;
+        margin: 0 auto;
+    }
+
+    button#reg {
+        border-radius: 90px;
+        background-color: #203331;
+        width: 100%;
+        height: 81%;
+        font-weight: 400;
+        font-size: 16px;
+        color: #9DB9A1 !important;
+    }
+
+    .media {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    button#reg:hover {
+        background-color: #101a19;
+    }
+    /* РЕГИСТРАЦИЯ */
+
+    /* ОТЗЫВЫ И АКЦИИ */
+    .par {
+        position: relative;
+        background-color: #ffffff;        
+        background-image: url(/resources/78.png);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+
+    img#tr {
+        width: 20%;
+    }
+
+    .otzv {
+        width: 55%;
+        margin: 0 auto;
+        padding-top: 5%;
+        padding-bottom: 8%;
+    }
+
+    .tor {
+        padding-top: 3%;
+    }
+
+    .akcii {
+        padding-top: 8%;
+    }
+
+    .rectangle {
+        padding-top: 1%;
+        padding-left: 1%;
+        padding-right: 1%;
+        padding-bottom: 1%;
+        margin: 0 auto;
+        width: 40%;
+        border: 3px solid #E1BFB3;
+    }
+
+    .carousel-control-prev-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+    }
+
+    .carousel-control-next-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+    }
+    /* ОТЗЫВЫ И АКЦИИ */
+
+    /* КОНТАКТЫ */
+    .contact {
+        background-color: #708A78;
+        height: 384px;
+    }
+
+    li {
+        list-style-type: none;
+        /* text-align: center; */
+        color: #203331;
+        font-weight: 400;
+        font-size: 18px !important;
+    }
+
+    .cont {
+        width: 65%;
+        margin: 0 auto;
+        padding-top: 2.7%;
+    }
+
+    .contac {
+        display: inline;
+        font-style: normal;
+        width: 23px;
+    }
+    /* КОНТАКТЫ */
+
+    footer {
+        background-color: #203331;
+        height: 50px;
+        width: 100%;
+    }
+
+    .knd {
+        padding-top: 0.8%;
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    a#cnd {
+        color: #EEEAE7;
+        font-weight: 300;
+    }
+
+
+@media screen and (max-width : 1024px) {
+    .green {
+        padding-bottom: 3%;
+        margin: 0 auto;
+        width: 100%;
+        height: 312px;
+        background-color: #203331;
+        margin-bottom: 20px;
+        margin-top: 50px
+    }
+
+    .b {
+        width: 65%;
+        margin: 0 auto;
+        padding-top: 100px;
+        padding-bottom: 11%;
+    }
+
+    h1 {
+        font-size: 50px !important;
+        color: #FFFFFF;
+        text-align: center;
+        padding-top: 100px;
+    }
+
+    .manic {
+        width: 80%;
+        padding-top: 5%;
+    }
+
+    .face {
+        width: 80%;
+        padding-top: 15%;
+    }
+
+    .hair {
+        width: 80%;
+        padding-top: 15%;
+    }
+
+    .regist2 {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .otzv {
+        width: 90%;
+        margin: 0 auto;
+        padding-top: 5%;
+    }
+
+    .rectangle {
+        padding-top: 1%;
+        padding-left: 1%;
+        padding-right: 1%;
+        padding-bottom: 1%;
+        margin: 0 auto;
+        width: 80%;
+        border: 3px solid #E1BFB3;
+    }
 }
+@media screen and (max-width : 768px) {
+    .green {
+        padding-bottom: 3%;
+        margin: 0 auto;
+        width: 100%;
+        height: 312px;
+        background-color: #203331;
+        margin-bottom: 20px;
+        margin-top: 50px
+    }
 
-/* ГЛАВНАЯ */
+    .b {
+        width: 65%;
+        margin: 0 auto;
+        padding-top: 100px;
+        padding-bottom: 11%;
+    }
 
-/* О НАС */
-.about {
-    /* height: 768px; */
-    width: 100%;
-    /* background-color: #EEEAE7; */
-}
+    h1 {
+        font-size: 50px !important;
+        color: #FFFFFF;
+        text-align: center;
+        padding-top: 100px;
+    }
 
-img#sln {
-    width: 100%;
-}
+    .manic {
+        width: 100%;        
+        padding-top: 5%;
+    }
 
-h2 {
-    font-weight: 500;
-    font-size: 46px !important;
-    color: #203331;
-}
+    .face {
+        width: 100%;        
+        padding-top: 15%;
+    }
 
-p {
-    font-size: 18px !important;
-    color: #203331;
-    font-weight: 400 !important;
-}
+    .hair {
+        width: 100%;        
+        padding-top: 15%;
+    }
+    .regist2 {
+        width: 90%;
+        margin: 0 auto;
+    }
+    .otzv {
+        width: 100%;
+        margin: 0 auto;
+        padding-top: 5%;
+    }
 
-.b {
-    width: 65%;
-    margin: 0 auto;
-    padding-top: 200px;
-    padding-bottom: 11%;
-}
-/* О НАС */
+    .rectangle {
+        padding-top: 1%;
+        padding-left: 1%;
+        padding-right: 1%;
+        padding-bottom: 1%;
+        margin: 0 auto;
+        width: 90%;
+        border: 3px solid #E1BFB3;
+    }
+    .cont {
+        width: 90%;
+        margin: 0 auto;
+        padding-top: 2.7%;
+        text-align: center;
+    }
+    .map {
+        margin: 0 auto;
+        margin-left: 20%;
+    }
+    .contact {
+        background-color: #708A78;
+        height: 623px;
+    }
 
-/* УСЛУГИ */
-.fone2 {
-    background-image: url(/resources/346.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 80%;
-}
-
-.price {
-    width: 100%;
-    /* background-color: #EEEAE7; */
-    /* нужен ли фон?? */
-    /* height: 2100px; */
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    padding-bottom: 15%;
     
 }
+@media screen and (max-width : 320px) {
 
-.manic {
-    width: 65%;
-    margin: 0 auto;
-    padding-top: 5%;
-}
-
-.face {
-    width: 65%;
-    margin: 0 auto;
-    padding-top: 15%;
-}
-
-.hair {
-    width: 65%;
-    margin: 0 auto;
-    padding-top: 15%;
-}
-
-h3 {
-    font-size: 30px !important;
-    color: #203331;
-}
-
-h4 {
-    font-size: 20px !important;
-    font-weight: 400 !important;
-    color: #203331;
-}
-
-.img_price {
-    width: 100%;
-}
-/* УСЛУГИ */
-
-/* РЕГИСТРАЦИЯ */
-.regist {
-    background-color: #9DB9A1;
-    height: 384px;
-    width: 100%;
-}
-
-.regist2 {
-    width: 55%;
-    margin: 0 auto;
-}
-
-button#reg {
-    border-radius: 90px;
-    background-color: #203331;
-    width: 100%;
-    height: 100%;
-    font-weight: 400;
-    font-size: 16px;
-    color: #9DB9A1 !important;
-}
-
-.media {
-    width: 80%;
-    margin: 0 auto;
-}
-
-button#reg:hover {
-    background-color: #101a19;
-}
-/* РЕГИСТРАЦИЯ */
-
-/* ОТЗЫВЫ И АКЦИИ */
-.par {
-    position: relative;
-    background-color: #ffffff;
-    height: 768px;
-    background-image: url(/resources/78.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-}
-
-img#tr {
-    width: 20%;
-}
-
-.otzv {
-    width: 55%;
-    margin: 0 auto;
-    padding-top: 5%;
-}
-
-.tor {
-    padding-top: 3%;
-}
-
-.akcii {
-    padding-top: 8%;
-}
-
-.rectangle {
-    padding-top: 1%;
-    padding-left: 1%;
-    padding-right: 1%;
-    padding-bottom: 1%;
-    margin: 0 auto;
-    width: 40%;
-    border: 3px solid #E1BFB3;
-}
-
-.carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-}
-
-.carousel-control-next-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%203331' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
-}
-/* ОТЗЫВЫ И АКЦИИ */
-
-/* КОНТАКТЫ */
-.contact {
-    background-color: #708A78;
-    height: 384px;
-}
-
-li {
-    list-style-type: none;
-    /* text-align: center; */
-    color: #203331;
-    font-weight: 400;
-    font-size: 18px !important;
-}
-
-.cont {
-    width: 65%;
-    margin: 0 auto;
-    padding-top: 2.7%;
-}
-
-.contac {
-    display: inline;
-    font-style: normal;
-    width: 23px;
-}
-/* КОНТАКТЫ */
-
-footer {
-    background-color: #203331;
-    height: 50px;
-    width: 100%;
-}
-
-.knd {
-    padding-top: 0.8%;
-    margin: 0 auto;
-    width: 90%;
-}
-
-a#cnd {
-    color: #EEEAE7;
-    font-weight: 300;
-}
-
-.map {
-    width: 5px;
-    height: 5px;
 }
