--- a/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
+++ b/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
@@ -342,7 +342,7 @@
     <div class="contact" id="section6">
         <div class="cont">
             <div class="row">
-                <div class="col-lg-6 col-sm-12">
+                <div class="col-lg-6 col-sm-6">
                     <ul>                        
                         <li>
                             <h3>Контакты</h3>
@@ -361,9 +361,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-6 col-sm-12">
+                <div class="col-lg-6 col-sm-6">
                     <div class="map">
-                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A35663334e522f80bd9eeb8f09a69ecffb8c7f9e5a71123837c2badc3acf5a910&amp;width=400&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A35663334e522f80bd9eeb8f09a69ecffb8c7f9e5a71123837c2badc3acf5a910&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
                     </div>
                 </div>
             </div>
