--- a/Конечный вариант/KNDsalon/wwwroot/css/home.css
+++ b/Конечный вариант/KNDsalon/wwwroot/css/home.css
@@ -454,7 +454,7 @@ h1 {
 
     .hair {
         width: 90%;
-        padding-top: 15%;
+        padding-top: 25%;
     }
 
     .img_price {
@@ -487,5 +487,16 @@ h1 {
     .contact {
         background-color: #708A78;
         height: 620px;
+    }
+    h3 {
+        font-size: 24px !important;
+        color: #203331;
+        
+    }
+
+    h4 {
+        font-size: 16px !important;
+        font-weight: 400 !important;
+        color: #203331;
     }
 }
