медия запросы для мобильника

--- a/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
+++ b/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
 
     <!--услуги-->
     <div class="price fone2" id="section3">
-        <h3 style="text-align: center;">Услуги</h3>
+        <h3 id="ysl" style="text-align: center;">Услуги</h3>
         <div class="manic">
             <div class="row">
                 <div class="col-lg-8 col-sm-6 col-12">
@@ -249,7 +249,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <input type="text" name="phone" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Телефон">
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="rtr col-lg-4 col-sm-6">
                     <select class="form-control" name="masterId" style="border-radius: 90px;" id="sel1">
                         <option>Выберите мастера</option>
                         @foreach (Master master in Model)
@@ -258,7 +258,7 @@
                         }
                     </select>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="rtr col-lg-4 col-sm-6">
                     <select class="form-control" name="serviceId" style="border-radius: 90px;" id="sel2">
                         <option>Выберите услугу</option>
 
