--- a/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
+++ b/Конечный вариант/KNDsalon/Views/Home/Index.cshtml
@@ -348,7 +348,7 @@
                             <h3>Контакты</h3>
                         </li></br>
                         <li>
-                            <img class="contac" src="~/icon/instagram.svg">  kndbeauty__
+                            <img class="contac" src="~/icon/instagram.svg"><a id="inst" style="text-decoration: none; color: #203331;" href="https://instagram.com/kndbeauty__?igshid=qdtih7l9u9yw"> kndbeauty__</a>  
                         </li></br>
                         <li>
                             <img class="contac" src="~/icon/envelope.svg">  kndbeauty@mail.ru
